syntax = "proto3";

package org.example.bookstore;
option java_multiple_files = true;
//option java_package = "com.example.tutorial.protos";
//option java_outer_classname = "BookProtos";

message Book {
  string isbn = 1;
  string title = 2;
  repeated string authors = 3;
  int32 page_count = 4;
}

message AddBookRequest {
  Book book = 1;
}

message AddBookResponse {
  bool success = 1;
  string message = 2;
}

message UpdateBookRequest {
  string isbn = 1;
  Book book = 2;
}

message UpdateBookResponse {
  bool success = 1;
  string message = 2;
}

message DeleteBookRequest {
  string isbn = 1;
}

message DeleteBookResponse {
  bool success = 1;
  string message = 2;
}

message GetBooksRequest {}

message GetBooksResponse {
  repeated Book books = 1;
}

service BookService {
  rpc AddBook (AddBookRequest) returns (AddBookResponse);
  rpc UpdateBook (UpdateBookRequest) returns (UpdateBookResponse);
  rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse);
  rpc GetBooks (GetBooksRequest) returns (GetBooksResponse);
}
